--- a/openai_realtime_speech/app/static/index.html
+++ b/openai_realtime_speech/app/static/index.html
@@ -15,8 +15,24 @@
           <button id="btnStart">Start</button>
           <button id="btnStop" disabled>Stop</button>
         </div>
+
+        <div class="row" style="margin-top:12px; gap:16px; flex-wrap:wrap;">
+          <label class="row" style="gap:8px;">
+            <input type="checkbox" id="wakeEnabled" checked />
+            <span>Wake word</span>
+          </label>
+
+          <label class="row" style="gap:8px;">
+            <span>Phrase:</span>
+            <input id="wakePhrase" value="hey assistant" />
+          </label>
+
+          <button id="btnWake" type="button">Start listening</button>
+          <button id="btnWakeStop" type="button" disabled>Stop listening</button>
+        </div>
+
         <p class="hint">
-          Uses WebRTC in your browser for low latency. Your OpenAI API key stays inside Home Assistant.
+          Wake word uses your browser’s SpeechRecognition (best on Chromium). WebRTC call setup is proxied through this add-on.
         </p>
       </section>
 
@@ -25,13 +41,7 @@
         <pre id="status">Idle</pre>
       </section>
 
-      <section class="card">
-        <h2>Notes</h2>
-        <ul>
-          <li>If you do not hear audio, check browser autoplay permissions and HA ingress/proxy behavior.</li>
-          <li>Some reverse proxies require explicit WebSocket/WebRTC support; Ingress generally works, but environments vary.</li>
-        </ul>
-      </section>
+      <audio id="remoteAudio" autoplay controls style="width:100%; margin-top: 12px;"></audio>
     </main>
 
     <script src="/static/app.js"></script>
